reference/7.0/Microsoft.PowerShell.Utility/Import-Csv.md
---
external help file: Microsoft.PowerShell.Commands.Utility.dll-Help.xml
keywords: powershell,cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Utility
ms.date: 1/8/2019
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.utility/import-csv?view=powershell-7&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Import-Csv
ms.openlocfilehash: 6c738c11aaa5131cef0ad0457dc50b376152c1f0
ms.sourcegitcommit: de63e9481cf8024883060aae61fb02c59c2de662
ms.translationtype: MT
ms.contentlocale: ko-KR
ms.lasthandoff: 07/03/2020
ms.locfileid: "93210890"
---
# <span data-ttu-id="de6aa-103">Import-Csv</span><span class="sxs-lookup"><span data-stu-id="de6aa-103">Import-Csv</span></span>

## <span data-ttu-id="de6aa-104">개요</span><span class="sxs-lookup"><span data-stu-id="de6aa-104">SYNOPSIS</span></span>
<span data-ttu-id="de6aa-105">쉼표로 구분 된 값 (CSV) 파일의 항목에서 테이블 형태의 사용자 지정 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-105">Creates table-like custom objects from the items in a comma-separated value (CSV) file.</span></span>

## <span data-ttu-id="de6aa-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="de6aa-106">SYNTAX</span></span>

### <span data-ttu-id="de6aa-107">DelimiterPath (기본값)</span><span class="sxs-lookup"><span data-stu-id="de6aa-107">DelimiterPath (Default)</span></span>

```
Import-Csv [[-Delimiter] <Char>] [-Path] <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="de6aa-108">DelimiterLiteralPath</span><span class="sxs-lookup"><span data-stu-id="de6aa-108">DelimiterLiteralPath</span></span>

```
Import-Csv [[-Delimiter] <Char>] -LiteralPath <String[]> [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="de6aa-109">CulturePath</span><span class="sxs-lookup"><span data-stu-id="de6aa-109">CulturePath</span></span>

```
Import-Csv [-Path] <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

### <span data-ttu-id="de6aa-110">CultureLiteralPath</span><span class="sxs-lookup"><span data-stu-id="de6aa-110">CultureLiteralPath</span></span>

```
Import-Csv -LiteralPath <String[]> -UseCulture [-Header <String[]>] [-Encoding <Encoding>]
 [<CommonParameters>]
```

## <span data-ttu-id="de6aa-111">설명</span><span class="sxs-lookup"><span data-stu-id="de6aa-111">DESCRIPTION</span></span>

<span data-ttu-id="de6aa-112">`Import-Csv`Cmdlet은 CSV 파일의 항목에서 테이블 유사 사용자 지정 개체를 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-112">The `Import-Csv` cmdlet creates table-like custom objects from the items in CSV files.</span></span> <span data-ttu-id="de6aa-113">CSV 파일의 각 열은 사용자 지정 개체의 속성이 되 고 행의 항목은 속성 값이 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-113">Each column in the CSV file becomes a property of the custom object and the items in rows become the property values.</span></span> <span data-ttu-id="de6aa-114">`Import-Csv` cmdlet에서 생성 된 파일을 포함 하 여 모든 CSV 파일에서 작동 `Export-Csv` 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-114">`Import-Csv` works on any CSV file, including files that are generated by the `Export-Csv` cmdlet.</span></span>

<span data-ttu-id="de6aa-115">Cmdlet의 매개 변수를 사용 하 여 `Import-Csv` 열 머리글 행과 항목 구분 기호를 지정 하거나, `Import-Csv` 현재 문화권의 목록 구분 기호를 항목 구분 기호로 사용할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-115">You can use the parameters of the `Import-Csv` cmdlet to specify the column header row and the item delimiter, or direct `Import-Csv` to use the list separator for the current culture as the item delimiter.</span></span>

<span data-ttu-id="de6aa-116">`ConvertTo-Csv`및 cmdlet을 사용 하 여 `ConvertFrom-Csv` 개체를 CSV 문자열로 변환 하 고 다시 변환할 수도 있습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-116">You can also use the `ConvertTo-Csv` and `ConvertFrom-Csv` cmdlets to convert objects to CSV strings (and back).</span></span> <span data-ttu-id="de6aa-117">이러한 cmdlet은 `Export-CSV` `Import-Csv` 파일을 처리 하지 않는다는 점을 제외 하 고 및 cmdlet과 동일 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-117">These cmdlets are the same as the `Export-CSV` and `Import-Csv` cmdlets, except that they do not deal with files.</span></span>

<span data-ttu-id="de6aa-118">CSV 파일의 머리글 행 항목에 빈 값 이나 null 값이 포함 되어 있으면 PowerShell에서 기본 머리글 행 이름을 삽입 하 고 경고 메시지를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-118">If a header row entry in a CSV file contains an empty or null value, PowerShell inserts a default header row name and displays a warning message.</span></span>

<span data-ttu-id="de6aa-119">PowerShell 6.0부터는 `Import-Csv` 이제 W3C 확장 로그 파일 형식을 지원 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-119">Starting with PowerShell 6.0, `Import-Csv` now supports the W3C Extended Log File Format.</span></span>

## <span data-ttu-id="de6aa-120">예제</span><span class="sxs-lookup"><span data-stu-id="de6aa-120">EXAMPLES</span></span>

### <span data-ttu-id="de6aa-121">예제 1: 프로세스 개체 가져오기</span><span class="sxs-lookup"><span data-stu-id="de6aa-121">Example 1: Import process objects</span></span>

<span data-ttu-id="de6aa-122">이 예제에서는 프로세스 개체의 CSV 파일을 내보낸 다음 가져오는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-122">This example shows how to export and then import a CSV file of process objects.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv
$P = Import-Csv -Path .\Processes.csv
$P | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name                       MemberType   Definition
----                       ----------   ----------
Equals                     Method       bool Equals(System.Object obj)
GetHashCode                Method       int GetHashCode()
GetType                    Method       type GetType()
ToString                   Method       string ToString()
BasePriority               NoteProperty string BasePriority=8
Company                    NoteProperty string Company=Microsoft Corporation
...
```

```powershell
$P | Format-Table
```

```Output
Name                   SI Handles VM            WS        PM        NPM    Path
----                   -- ------- --            --        --        ---    ----
ApplicationFrameHost   4  407     2199293489152 15884288  15151104  23792  C:\WINDOWS\system32\ApplicationFrameHost.exe
...
wininit                0  157     2199112204288 4591616   1630208   10376
winlogon               4  233     2199125549056 7659520   2826240   10992  C:\WINDOWS\System32\WinLogon.exe
WinStore.App           4  846     873435136     33652736  26607616  55432  C:\Program Files\WindowsApps\Microsoft.WindowsStore_11712.1001.13.0_x64__8weky...
WmiPrvSE               0  201     2199100219392 8830976   3297280   10632  C:\WINDOWS\system32\wbem\wmiprvse.exe
WmiPrvSE               0  407     2199157727232 18509824  12922880  16624  C:\WINDOWS\system32\wbem\wmiprvse.exe
WUDFHost               0  834     2199310204928 51945472  87441408  24984  C:\Windows\System32\WUDFHost.exe
```

<span data-ttu-id="de6aa-123">`Get-Process`Cmdlet은 프로세스 개체를 파이프라인에서로 보냅니다 `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-123">The `Get-Process` cmdlet sends process objects down the pipeline to the `Export-Csv`.</span></span> <span data-ttu-id="de6aa-124">`Export-Csv`Cmdlet은 프로세스 개체를 CSV 문자열로 변환 하 고 Processes.csv 파일에 문자열을 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-124">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="de6aa-125">`Import-Csv`Cmdlet은 Processes.csv 파일에서 CSV 문자열을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-125">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>
<span data-ttu-id="de6aa-126">문자열은 변수에 저장 됩니다 `$P` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-126">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="de6aa-127">`$P`변수는 `Get-Member` 가져온 CSV 문자열의 속성을 표시 하는 cmdlet에 파이프라인으로 전송 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-127">The `$P` variable is sent down the pipeline to the `Get-Member` cmdlet that displays the properties of the imported CSV strings.</span></span> <span data-ttu-id="de6aa-128">`$P`변수는 파이프라인에서 cmdlet으로 전송 되 `Format-Table` 고 개체를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-128">The `$P` variable is sent down the pipeline to the `Format-Table` cmdlet and displays the objects.</span></span>

### <span data-ttu-id="de6aa-129">예제 2: 구분 기호 지정</span><span class="sxs-lookup"><span data-stu-id="de6aa-129">Example 2: Specify the delimiter</span></span>

<span data-ttu-id="de6aa-130">이 예에서는 cmdlet의 **Delimiter** 매개 변수를 사용 하는 방법을 보여 줍니다 `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-130">This example shows how to use the **Delimiter** parameter of the `Import-Csv` cmdlet.</span></span>

```powershell
Get-Process | Export-Csv -Path .\Processes.csv -Delimiter :
$P = Import-Csv -Path .\Processes.csv -Delimiter :
$P | Format-Table
```

<span data-ttu-id="de6aa-131">`Get-Process`Cmdlet은 프로세스 개체를 파이프라인에서로 보냅니다 `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-131">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="de6aa-132">`Export-Csv`Cmdlet은 프로세스 개체를 CSV 문자열로 변환 하 고 Processes.csv 파일에 문자열을 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-132">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span>
<span data-ttu-id="de6aa-133">**구분 기호** 매개 변수는 콜론 구분 기호를 지정 하는 데 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-133">The **Delimiter** parameter is used to specify a colon delimiter.</span></span> <span data-ttu-id="de6aa-134">`Import-Csv`Cmdlet은 Processes.csv 파일에서 CSV 문자열을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-134">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span> <span data-ttu-id="de6aa-135">문자열은 변수에 저장 됩니다 `$P` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-135">The strings are saved in the `$P` variable.</span></span> <span data-ttu-id="de6aa-136">To `$P` variable은 파이프라인에서 cmdlet으로 전송 됩니다 `Format-Table` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-136">To `$P` variable is sent down the pipeline to the `Format-Table` cmdlet.</span></span>

### <span data-ttu-id="de6aa-137">예제 3: 구분 기호에 대 한 현재 문화권 지정</span><span class="sxs-lookup"><span data-stu-id="de6aa-137">Example 3: Specify the current culture for the delimiter</span></span>

<span data-ttu-id="de6aa-138">이 예에서는 `Import-Csv` **UseCulture** 매개 변수와 함께 cmdlet을 사용 하는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-138">This example shows how to use the `Import-Csv` cmdlet with the **UseCulture** parameter.</span></span>

```powershell
(Get-Culture).TextInfo.ListSeparator
Get-Process | Export-Csv -Path .\Processes.csv -UseCulture
Import-Csv -Path .\Processes.csv -UseCulture
```

<span data-ttu-id="de6aa-139">이 `Get-Culture` cmdlet은 중첩 된 속성 **System.globalization.cultureinfo.installeduiculture.textinfo.oemcodepage** 및 **listseparator** 를 사용 하 여 현재 문화권의 기본 목록 구분 기호를 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-139">The `Get-Culture` cmdlet uses the nested properties **TextInfo** and **ListSeparator** to get the current culture's default list separator.</span></span> <span data-ttu-id="de6aa-140">`Get-Process`Cmdlet은 프로세스 개체를 파이프라인에서로 보냅니다 `Export-Csv` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-140">The `Get-Process` cmdlet sends process objects down the pipeline to `Export-Csv`.</span></span> <span data-ttu-id="de6aa-141">`Export-Csv`Cmdlet은 프로세스 개체를 CSV 문자열로 변환 하 고 Processes.csv 파일에 문자열을 저장 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-141">The `Export-Csv` cmdlet converts the process objects to CSV strings and saves the strings in the Processes.csv file.</span></span> <span data-ttu-id="de6aa-142">**UseCulture** 매개 변수는 현재 문화권의 기본 목록 구분 기호를 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-142">The **UseCulture** parameter uses the current culture's default list separator.</span></span> <span data-ttu-id="de6aa-143">`Import-Csv`Cmdlet은 Processes.csv 파일에서 CSV 문자열을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-143">The `Import-Csv` cmdlet imports the CSV strings from the Processes.csv file.</span></span>

### <span data-ttu-id="de6aa-144">예제 4: 가져온 개체의 속성 이름 변경</span><span class="sxs-lookup"><span data-stu-id="de6aa-144">Example 4: Change property names in an imported object</span></span>

<span data-ttu-id="de6aa-145">이 예제에서는의 **Header** 매개 변수를 사용 하 여 `Import-Csv` 가져온 결과 개체의 속성 이름을 변경 하는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-145">This example shows how to use the **Header** parameter of `Import-Csv` to change the names of properties in the resulting imported object.</span></span>

```powershell
Start-Job -ScriptBlock { Get-Process } | Export-Csv -Path .\Jobs.csv -NoTypeInformation
$Header = 'State', 'MoreData', 'StatusMessage', 'Location', 'Command', 'StateInfo', 'Finished', 'InstanceId', 'Id', 'Name', 'ChildJobs', 'BeginTime', 'EndTime', 'JobType', 'Output', 'Error', 'Progress', 'Verbose', 'Debug', 'Warning', 'Information'
# Delete the default header from file
$A = Get-Content -Path .\Jobs.csv
$A = $A[1..($A.Count - 1)]
$A | Out-File -FilePath .\Jobs.csv
$J = Import-Csv -Path .\Jobs.csv -Header $Header
$J
```

```Output
State         : Running
MoreData      : True
StatusMessage :
Location      : localhost
Command       : Get-Process
StateInfo     : Running
Finished      : System.Threading.ManualResetEvent
InstanceId    : a259eb63-6824-4b97-a033-305108ae1c2e
Id            : 1
Name          : Job1
ChildJobs     : System.Collections.Generic.List`1[System.Management.Automation.Job]
BeginTime     : 12/20/2018 18:59:57
EndTime       :
JobType       : BackgroundJob
Output        : System.Management.Automation.PSDataCollection`1[System.Management.Automation.PSObject]
Error         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ErrorRecord]
Progress      : System.Management.Automation.PSDataCollection`1[System.Management.Automation.ProgressRecord]
Verbose       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.VerboseRecord]
Debug         : System.Management.Automation.PSDataCollection`1[System.Management.Automation.DebugRecord]
Warning       : System.Management.Automation.PSDataCollection`1[System.Management.Automation.WarningRecord]
Information   : System.Management.Automation.PSDataCollection`1[System.Management.Automation.InformationRecord]
```

<span data-ttu-id="de6aa-146">Cmdlet은를 `Start-Job` 실행 하는 백그라운드 작업을 시작 `Get-Process` 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-146">The `Start-Job` cmdlet starts a background job that runs `Get-Process`.</span></span> <span data-ttu-id="de6aa-147">작업 개체는 파이프라인에서 cmdlet으로 전송 되 `Export-Csv` 고 CSV 문자열로 변환 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-147">A job object is sent down the pipeline to the `Export-Csv` cmdlet and converted to a CSV string.</span></span> <span data-ttu-id="de6aa-148">**Notypeinformation** 매개 변수는 CSV 출력에서 형식 정보 헤더를 제거 하 고 PowerShell Core에서 선택 사항입니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-148">The **NoTypeInformation** parameter removes the type information header from CSV output and is optional in PowerShell Core.</span></span>
<span data-ttu-id="de6aa-149">`$Header`변수에는 다음과 같은 기본값을 대체 하는 사용자 지정 헤더가 포함 됩니다. **HasMoreData** , **jobstateinfo** , **Psbegintime** , **psendtime** 및 **PSJobTypeName** .</span><span class="sxs-lookup"><span data-stu-id="de6aa-149">The `$Header` variable contains a custom header that replaces the following default values: **HasMoreData** , **JobStateInfo** , **PSBeginTime** , **PSEndTime** , and **PSJobTypeName** .</span></span> <span data-ttu-id="de6aa-150">변수는 cmdlet을 사용 하 여 `$A` `Get-Content` Jobs.csv 파일에서 CSV 문자열을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-150">The `$A` variable uses the `Get-Content` cmdlet to get the CSV string from the Jobs.csv file.</span></span> <span data-ttu-id="de6aa-151">`$A`변수는 파일에서 기본 헤더를 제거 하는 데 사용 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-151">The `$A` variable is used to remove the default header from the file.</span></span> <span data-ttu-id="de6aa-152">`Out-File`Cmdlet은 Jobs.csv 파일의 새 버전을 변수에 저장 합니다 `$A` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-152">The `Out-File` cmdlet saves the new version of the Jobs.csv file in the `$A` variable.</span></span> <span data-ttu-id="de6aa-153">`Import-Csv`Cmdlet은 Jobs.csv 파일을 가져오고 **Header** 매개 변수를 사용 하 여 변수를 적용 `$Header` 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-153">The `Import-Csv` cmdlet imports the Jobs.csv file and uses the **Header** parameter to apply the `$Header` variable.</span></span> <span data-ttu-id="de6aa-154">`$J`변수는 가져온 **PSCustomObject** 를 포함 하 고 PowerShell 콘솔에 개체를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-154">The `$J` variable contains the imported **PSCustomObject** and displays the object in the PowerShell console.</span></span>

### <span data-ttu-id="de6aa-155">예 5: CSV 파일을 사용 하 여 사용자 지정 개체 만들기</span><span class="sxs-lookup"><span data-stu-id="de6aa-155">Example 5: Create a custom object using a CSV file</span></span>

<span data-ttu-id="de6aa-156">이 예제에서는 CSV 파일을 사용 하 여 PowerShell에서 사용자 지정 개체를 만드는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-156">This example shows how to create a custom object in PowerShell by using a CSV file.</span></span>

```powershell
Get-Content -Path .\Links.csv
```

```Output
113207,about_Aliases
113208,about_Arithmetic_Operators
113209,about_Arrays
113210,about_Assignment_Operators
113212,about_Automatic_Variables
113213,about_Break
113214,about_Command_Precedence
113215,about_Command_Syntax
144309,about_Comment_Based_Help
113216,about_CommonParameters
113217,about_Comparison_Operators
113218,about_Continue
113219,about_Core_Commands
113220,about_Data_Section
```

```powershell
$A = Import-Csv -Path .\Links.csv -Header 'LinkID', 'TopicTitle'
$A | Get-Member
```

```Output
   TypeName: System.Management.Automation.PSCustomObject

Name        MemberType   Definition
----        ----------   ----------
Equals      Method       bool Equals(System.Object obj)
GetHashCode Method       int GetHashCode()
GetType     Method       type GetType()
ToString    Method       string ToString()
LinkID      NoteProperty string LinkID=113207
TopicTitle  NoteProperty string TopicTitle=about_Aliases
```

```powershell
$A | Where-Object -Property TopicTitle -Like '*alias*'
```

```Output
LinkID TopicTitle
------ ----------
113207 about_Aliases
```

<span data-ttu-id="de6aa-157">Links.csv 파일을 만들려면 출력에 표시 된 값을 사용 합니다 `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-157">To create your Links.csv file, use the values shown in the `Get-Content` output.</span></span>

<span data-ttu-id="de6aa-158">`Get-Content`Cmdlet은 Links.csv 파일을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-158">The `Get-Content` cmdlet displays the Links.csv file.</span></span> <span data-ttu-id="de6aa-159">`Import-Csv`Cmdlet은 Links.csv 파일을 가져옵니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-159">The `Import-Csv` cmdlet imports the Links.csv file.</span></span> <span data-ttu-id="de6aa-160">**Header** 매개 변수는 속성 이름 **LinkId** 및 **TopicTitle** 를 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-160">The **Header** parameter specifies the property names **LinkId** and **TopicTitle** .</span></span> <span data-ttu-id="de6aa-161">개체는 변수에 저장 됩니다 `$A` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-161">The objects are stored in the `$A` variable.</span></span> <span data-ttu-id="de6aa-162">`Get-Member`Cmdlet은 **헤더** 매개 변수에서 속성 이름을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-162">The `Get-Member` cmdlet shows the property names from the **Header** parameter.</span></span> <span data-ttu-id="de6aa-163">`Where-Object`Cmdlet은 **별칭** 을 포함 하는 **TopicTitle** 속성을 사용 하 여 개체를 선택 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-163">The `Where-Object` cmdlet selects objects with the **TopicTitle** property that includes **alias** .</span></span>

### <span data-ttu-id="de6aa-164">예 6: 값이 누락 된 CSV 가져오기</span><span class="sxs-lookup"><span data-stu-id="de6aa-164">Example 6: Import a CSV that is missing a value</span></span>

<span data-ttu-id="de6aa-165">이 예에서는 `Import-Csv` CSV 파일의 머리글 행에 null 값 또는 빈 값이 포함 된 경우 PowerShell의 cmdlet이 응답 하는 방법을 보여 줍니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-165">This example shows how the `Import-Csv` cmdlet in PowerShell responds when the header row in a CSV file includes a null or empty value.</span></span> <span data-ttu-id="de6aa-166">`Import-Csv` 에서 반환 하는 개체의 속성 이름이 되는 누락 된 헤더 행의 기본 이름을 대체 `Import-Csv` 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-166">`Import-Csv` substitutes a default name for the missing header row that becomes the property name of the object that `Import-Csv` returns.</span></span>

```powershell
Get-Content -Path .\Projects.csv
```

```Output
ProjectID,ProjectName,,Completed
13,Inventory,Redmond,True
440,,FarEast,True
469,Marketing,Europe,False
```

```powershell
Import-Csv -Path .\Projects.csv
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.

ProjectID ProjectName H1      Completed
--------- ----------- --      ---------
13        Inventory   Redmond True
440                   FarEast True
469       Marketing   Europe  False
```

```powershell
(Import-Csv -Path .\Projects.csv).H1
```

```Output
WARNING: One or more headers were not specified. Default names starting with "H" have been used in place of any missing headers.
Redmond
FarEast
Europe
```

<span data-ttu-id="de6aa-167">Projects.csv 파일을 만들려면 예제의 출력에 표시 된 값을 사용 합니다 `Get-Content` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-167">To create your Projects.csv file, use the values shown in the example's `Get-Content` output.</span></span>

<span data-ttu-id="de6aa-168">`Get-Content`Cmdlet은 Projects.csv 파일을 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-168">The `Get-Content` cmdlet displays the Projects.csv file.</span></span> <span data-ttu-id="de6aa-169">머리글 행에서 **ProjectName** 과 **Completed** 사이의 값이 누락 되었습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-169">The header row is missing a value between **ProjectName** and **Completed** .</span></span> <span data-ttu-id="de6aa-170">`Import-Csv` **H1** 이 기본 헤더 이름이 기 때문에 cmdlet은 Projects.csv 파일을 가져오고 경고 메시지를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-170">The `Import-Csv` cmdlet imports the Projects.csv file and displays a warning message because **H1** is a default header name.</span></span> <span data-ttu-id="de6aa-171">`(Import-Csv -Path
.\Projects.csv).H1`명령은 **H1** 속성 값을 가져오고 경고를 표시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-171">The `(Import-Csv -Path
.\Projects.csv).H1` command gets the **H1** property values and displays a warning.</span></span>

## <span data-ttu-id="de6aa-172">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="de6aa-172">PARAMETERS</span></span>

### <span data-ttu-id="de6aa-173">-구분 기호</span><span class="sxs-lookup"><span data-stu-id="de6aa-173">-Delimiter</span></span>

<span data-ttu-id="de6aa-174">CSV 파일의 속성 값을 구분하는 구분 기호를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-174">Specifies the delimiter that separates the property values in the CSV file.</span></span>
<span data-ttu-id="de6aa-175">기본값은 쉼표(,)입니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-175">The default is a comma (,).</span></span>

<span data-ttu-id="de6aa-176">콜론(:)과 같은 문자를 입력합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-176">Enter a character, such as a colon (:).</span></span>
<span data-ttu-id="de6aa-177">세미콜론 (;)을 지정 하려면 작은따옴표로 묶습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-177">To specify a semicolon (;) enclose it in single quotation marks.</span></span>

<span data-ttu-id="de6aa-178">파일의 실제 문자열 구분 기호 이외의 문자를 지정 하는 경우는 `Import-Csv` csv 문자열에서 개체를 만들 수 없으며 csv 문자열을 반환 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-178">If you specify a character other than the actual string delimiter in the file, `Import-Csv` cannot create the objects from the CSV strings and will return the CSV strings.</span></span>

```yaml
Type: System.Char
Parameter Sets: DelimiterPath, DelimiterLiteralPath
Aliases:

Required: False
Position: 1
Default value: comma (,)
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="de6aa-179">-Encoding</span><span class="sxs-lookup"><span data-stu-id="de6aa-179">-Encoding</span></span>

<span data-ttu-id="de6aa-180">가져온 CSV 파일의 인코딩을 지정 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-180">Specifies the encoding for the imported CSV file.</span></span> <span data-ttu-id="de6aa-181">기본값은 `utf8NoBOM`입니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-181">The default value is `utf8NoBOM`.</span></span>

<span data-ttu-id="de6aa-182">이 매개 변수에 허용 되는 값은 다음과 같습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-182">The acceptable values for this parameter are as follows:</span></span>

- <span data-ttu-id="de6aa-183">`ascii`: ASCII (7 비트) 문자 집합에 대 한 인코딩을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-183">`ascii`: Uses the encoding for the ASCII (7-bit) character set.</span></span>
- <span data-ttu-id="de6aa-184">`bigendianunicode`: 빅 endian 바이트 순서를 사용 하 여 UTF-16 형식으로 인코딩합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-184">`bigendianunicode`: Encodes in UTF-16 format using the big-endian byte order.</span></span>
- <span data-ttu-id="de6aa-185">`oem`: MS-DOS 및 콘솔 프로그램에 기본 인코딩을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-185">`oem`: Uses the default encoding for MS-DOS and console programs.</span></span>
- <span data-ttu-id="de6aa-186">`unicode`: 작은 endian 바이트 순서를 사용 하 여 UTF-16 형식으로 인코딩합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-186">`unicode`: Encodes in UTF-16 format using the little-endian byte order.</span></span>
- <span data-ttu-id="de6aa-187">`utf7`: UTF-7 형식으로 인코딩합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-187">`utf7`: Encodes in UTF-7 format.</span></span>
- <span data-ttu-id="de6aa-188">`utf8`: UTF-8 형식으로 인코딩합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-188">`utf8`: Encodes in UTF-8 format.</span></span>
- <span data-ttu-id="de6aa-189">`utf8BOM`: 바이트 순서 표시 (BOM)를 사용 하 여 UTF-8 형식으로 인코딩합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-189">`utf8BOM`: Encodes in UTF-8 format with Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="de6aa-190">`utf8NoBOM`: BOM (바이트 순서 표시) 없이 UTF-8 형식으로 인코딩합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-190">`utf8NoBOM`: Encodes in UTF-8 format without Byte Order Mark (BOM)</span></span>
- <span data-ttu-id="de6aa-191">`utf32`: U t f-32 형식으로 인코딩합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-191">`utf32`: Encodes in UTF-32 format.</span></span>

<span data-ttu-id="de6aa-192">PowerShell 6.2부터 **Encoding** 매개 변수를 사용 하 여 등록 된 코드 페이지의 숫자 id (예: `-Encoding 1251` ) 또는 등록 된 코드 페이지의 문자열 이름을 사용할 수도 있습니다 (예: `-Encoding "windows-1251"` ).</span><span class="sxs-lookup"><span data-stu-id="de6aa-192">Beginning with PowerShell 6.2, the **Encoding** parameter also allows numeric IDs of registered code pages (like `-Encoding 1251`) or string names of registered code pages (like `-Encoding "windows-1251"`).</span></span> <span data-ttu-id="de6aa-193">자세한 내용은 [인코딩에](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2)대 한 .net 설명서를 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="de6aa-193">For more information, see the .NET documentation for [Encoding.CodePage](/dotnet/api/system.text.encoding.codepage?view=netcore-2.2).</span></span>

```yaml
Type: System.Text.Encoding
Parameter Sets: (All)
Aliases:
Accepted values: ASCII, BigEndianUnicode, OEM, Unicode, UTF7, UTF8, UTF8BOM, UTF8NoBOM, UTF32

Required: False
Position: Named
Default value: UTF8NoBOM
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="de6aa-194">-헤더</span><span class="sxs-lookup"><span data-stu-id="de6aa-194">-Header</span></span>

<span data-ttu-id="de6aa-195">가져온 파일의 대체 열 머리글 행을 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-195">Specifies an alternate column header row for the imported file.</span></span> <span data-ttu-id="de6aa-196">열 머리글은에서 만든 개체의 속성 이름을 결정 합니다 `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-196">The column header determines the property names of the objects created by `Import-Csv`.</span></span>

<span data-ttu-id="de6aa-197">열 머리글을 쉼표로 구분 된 목록으로 입력 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-197">Enter column headers as a comma-separated list.</span></span> <span data-ttu-id="de6aa-198">머리글 문자열을 따옴표로 묶지 마세요.</span><span class="sxs-lookup"><span data-stu-id="de6aa-198">Do not enclose the header string in quotation marks.</span></span> <span data-ttu-id="de6aa-199">각 열 머리글을 작은따옴표로 묶습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-199">Enclose each column header in single quotation marks.</span></span>

<span data-ttu-id="de6aa-200">데이터 열 보다 더 작은 수의 열 머리글을 입력 하면 나머지 데이터 열이 삭제 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-200">If you enter fewer column headers than there are data columns, the remaining data columns are discarded.</span></span> <span data-ttu-id="de6aa-201">데이터 열 보다 많은 열 머리글을 입력 하면 빈 데이터 열이 포함 된 추가 열 머리글이 만들어집니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-201">If you enter more column headers than there are data columns, the additional column headers are created with empty data columns.</span></span>

<span data-ttu-id="de6aa-202">**Header** 매개 변수를 사용 하는 경우 CSV 파일에서 원래 머리글 행을 삭제 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-202">When using the **Header** parameter, delete the original header row from the CSV file.</span></span> <span data-ttu-id="de6aa-203">그렇지 않으면는 `Import-Csv` 머리글 행의 항목에서 개체를 추가로 만듭니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-203">Otherwise, `Import-Csv` creates an extra object from the items in the header row.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="de6aa-204">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="de6aa-204">-LiteralPath</span></span>

<span data-ttu-id="de6aa-205">가져올 CSV 파일의 경로를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-205">Specifies the path to the CSV file to import.</span></span> <span data-ttu-id="de6aa-206">**Path** 와 달리 **LiteralPath** 매개 변수 값은 입력한 대로 사용됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-206">Unlike **Path** , the value of the **LiteralPath** parameter is used exactly as it is typed.</span></span> <span data-ttu-id="de6aa-207">어떠한 문자도 와일드카드로 해석되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-207">No characters are interpreted as wildcards.</span></span> <span data-ttu-id="de6aa-208">이스케이프 문자가 포함된 경로는 작은따옴표로 묶으세요.</span><span class="sxs-lookup"><span data-stu-id="de6aa-208">If the path includes escape characters, enclose it in single quotation marks.</span></span> <span data-ttu-id="de6aa-209">작은따옴표는 모든 문자를 이스케이프 시퀀스로 해석 하지 않도록 PowerShell에 지시 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-209">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterLiteralPath, CultureLiteralPath
Aliases: PSPath, LP

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="de6aa-210">-Path</span><span class="sxs-lookup"><span data-stu-id="de6aa-210">-Path</span></span>

<span data-ttu-id="de6aa-211">가져올 CSV 파일의 경로를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-211">Specifies the path to the CSV file to import.</span></span>
<span data-ttu-id="de6aa-212">에 대 한 경로를 파이프 할 수도 있습니다 `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-212">You can also pipe a path to `Import-Csv`.</span></span>

```yaml
Type: System.String[]
Parameter Sets: DelimiterPath, CulturePath
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: False
```

### <span data-ttu-id="de6aa-213">-UseCulture</span><span class="sxs-lookup"><span data-stu-id="de6aa-213">-UseCulture</span></span>

<span data-ttu-id="de6aa-214">현재 문화권의 목록 구분 기호를 항목 구분 기호로 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-214">Uses the list separator for the current culture as the item delimiter.</span></span> <span data-ttu-id="de6aa-215">문화권에 대 한 목록 구분 기호를 찾으려면 다음 명령을 사용 합니다. `(Get-Culture).TextInfo.ListSeparator`</span><span class="sxs-lookup"><span data-stu-id="de6aa-215">To find the list separator for a culture, use the following command: `(Get-Culture).TextInfo.ListSeparator`.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: CulturePath, CultureLiteralPath
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="de6aa-216">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="de6aa-216">CommonParameters</span></span>

<span data-ttu-id="de6aa-217">이 cmdlet 일반 매개 변수를 지원합니다. -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction 및 -WarningVariable.</span><span class="sxs-lookup"><span data-stu-id="de6aa-217">This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable.</span></span> <span data-ttu-id="de6aa-218">자세한 내용은 [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216)를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="de6aa-218">For more information, see [about_CommonParameters](https://go.microsoft.com/fwlink/?LinkID=113216).</span></span>

## <span data-ttu-id="de6aa-219">입력</span><span class="sxs-lookup"><span data-stu-id="de6aa-219">INPUTS</span></span>

### <span data-ttu-id="de6aa-220">System.String</span><span class="sxs-lookup"><span data-stu-id="de6aa-220">System.String</span></span>

<span data-ttu-id="de6aa-221">경로를 포함 하는 문자열을로 파이프 할 수 있습니다 `Import-Csv` .</span><span class="sxs-lookup"><span data-stu-id="de6aa-221">You can pipe a string that contains a path to `Import-Csv`.</span></span>

## <span data-ttu-id="de6aa-222">출력</span><span class="sxs-lookup"><span data-stu-id="de6aa-222">OUTPUTS</span></span>

### <span data-ttu-id="de6aa-223">Object</span><span class="sxs-lookup"><span data-stu-id="de6aa-223">Object</span></span>

<span data-ttu-id="de6aa-224">이 cmdlet은 CSV 파일의 내용으로 설명 되는 개체를 반환 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-224">This cmdlet returns the objects described by the content in the CSV file.</span></span>

## <span data-ttu-id="de6aa-225">참고</span><span class="sxs-lookup"><span data-stu-id="de6aa-225">NOTES</span></span>

<span data-ttu-id="de6aa-226">가져온 개체는 개체 유형의 CSV 버전 이므로 CSV가 아닌 버전의 개체 유형을 포맷 하는 PowerShell 유형 형식 지정 항목을 통해 인식 되지 않으며 형식이 지정 되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-226">Because the imported objects are CSV versions of the object type, they are not recognized and formatted by the PowerShell type formatting entries that format the non-CSV versions of the object type.</span></span>

<span data-ttu-id="de6aa-227">명령의 결과는 `Import-Csv` 테이블 형식의 사용자 지정 개체를 구성 하는 문자열의 컬렉션입니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-227">The result of an `Import-Csv` command is a collection of strings that form a table-like custom object.</span></span> <span data-ttu-id="de6aa-228">각 행은 별도의 문자열 이므로 개체의 **count** 속성을 사용 하 여 테이블 행 수를 계산할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-228">Each row is a separate string, so you can use the **Count** property of the object to count the table rows.</span></span> <span data-ttu-id="de6aa-229">열은 개체의 속성이고 행의 항목은 속성 값입니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-229">The columns are the properties of the object and items in the rows are the property values.</span></span>

<span data-ttu-id="de6aa-230">열 머리글 행에 따라 열 수와 열 이름이 결정됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-230">The column header row determines the number of columns and the column names.</span></span> <span data-ttu-id="de6aa-231">또한 열 이름은 개체의 속성 이름입니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-231">The column names are also the names of the properties of the objects.</span></span> <span data-ttu-id="de6aa-232">**Header** 매개 변수를 사용 하 여 열 머리글을 지정 하지 않는 한 첫 번째 행은 열 머리글로 해석 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-232">The first row is interpreted to be the column headers, unless you use the **Header** parameter to specify column headers.</span></span> <span data-ttu-id="de6aa-233">모든 행에 머리글 행보다 많은 값이 있으면 추가 값이 무시됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-233">If any row has more values than the header row, the additional values are ignored.</span></span>

<span data-ttu-id="de6aa-234">열 머리글 행이 값을 누락 하거나 null 또는 빈 값을 포함 하는 경우에는가 `Import-Csv` 누락 된 열 머리글 및 속성 이름에 대해 **H** 다음에 숫자를 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-234">If the column header row is missing a value or contains a null or empty value, `Import-Csv` uses **H** followed by a number for the missing column header and property name.</span></span>

<span data-ttu-id="de6aa-235">CSV 파일에서 각 개체는 쉼표로 구분된 개체 속성 값 목록으로 표시됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-235">In the CSV file, each object is represented by a comma-separated list of the property values of the object.</span></span> <span data-ttu-id="de6aa-236">속성 값은 개체의 **ToString ()** 메서드를 사용 하 여 문자열로 변환 되므로 속성 값의 이름으로 표시 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-236">The property values are converted to strings by using the **ToString()** method of the object, so they are represented by the name of the property value.</span></span> <span data-ttu-id="de6aa-237">`Export-Csv` 는 개체의 메서드를 내보내지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-237">`Export-Csv` does not export the methods of the object.</span></span>

<span data-ttu-id="de6aa-238">`Import-Csv` 는 W3C 확장 로그 형식도 지원 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-238">`Import-Csv` also supports the W3C Extended Log format.</span></span> <span data-ttu-id="de6aa-239">로 시작 하는 줄은 주석이로 시작 하 고 `#` `#Fields:` 구분 기호로 분리 된 열 이름 목록을 포함 하지 않는 한 주석으로 처리 되 고 무시 됩니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-239">Lines starting with `#` are treated as comments and ignored unless the comment starts with `#Fields:` and contains delimited list of column names.</span></span> <span data-ttu-id="de6aa-240">이 경우 cmdlet은 이러한 열 이름을 사용 합니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-240">In that case, the cmdlet uses those column names.</span></span> <span data-ttu-id="de6aa-241">Windows IIS 및 기타 웹 서버 로그에 대 한 표준 형식입니다.</span><span class="sxs-lookup"><span data-stu-id="de6aa-241">This is the standard format for Windows IIS and other web server logs.</span></span> <span data-ttu-id="de6aa-242">자세한 내용은 [확장 로그 파일 형식](https://www.w3.org/TR/WD-logfile.html)을 참조 하세요.</span><span class="sxs-lookup"><span data-stu-id="de6aa-242">For more information, see [Extended Log File Format](https://www.w3.org/TR/WD-logfile.html).</span></span>

## <span data-ttu-id="de6aa-243">관련 링크</span><span class="sxs-lookup"><span data-stu-id="de6aa-243">RELATED LINKS</span></span>

[<span data-ttu-id="de6aa-244">ConvertFrom-Csv</span><span class="sxs-lookup"><span data-stu-id="de6aa-244">ConvertFrom-Csv</span></span>](ConvertFrom-Csv.md)

[<span data-ttu-id="de6aa-245">ConvertTo-Csv</span><span class="sxs-lookup"><span data-stu-id="de6aa-245">ConvertTo-Csv</span></span>](ConvertTo-Csv.md)

[<span data-ttu-id="de6aa-246">Export-Csv</span><span class="sxs-lookup"><span data-stu-id="de6aa-246">Export-Csv</span></span>](Export-Csv.md)

[<span data-ttu-id="de6aa-247">Get-Culture</span><span class="sxs-lookup"><span data-stu-id="de6aa-247">Get-Culture</span></span>](Get-Culture.md)
